--- a/app/views/trips_runs/_runs_table.html.haml
+++ b/app/views/trips_runs/_runs_table.html.haml
@@ -14,7 +14,7 @@
       %tr
         %td
           = link_to run.name, '#', data: {run_id: run.id}, class: 'run_name_link'
-        %td= run.repeating_run_id.present? ? translate_helper(:run_type_recurring) : translate_helper(:run_type_daily)
+        %td= run.repeating_run_id.present? ? translate_helper(:run_trip_type_recurring) : translate_helper(:run_trip_type_daily)
         %td= run.vehicle.try(:name)
         %td= run.driver.try(:name)
         %td= format_time_for_listing run.scheduled_start_time
