--- a/app/views/trips_runs/index.html.haml
+++ b/app/views/trips_runs/index.html.haml
@@ -34,21 +34,31 @@
     border-color: #8a6d3b;
   }
 
-  #unscheduled_trips_panel {
+  #unscheduled_trips_container {
     position: fixed;
     bottom: 0px;
     max-height: 230px;
     left: 0px;
     right: 0px;
-    margin: 0px;
+    margin: 0px 0px 5px 0px;
+    padding-bottom: 30px;
+    background: white;
+  }
+
+  .drop-zone-active {
+    -moz-box-shadow: 0 4px 8px rgba(0,0,0,0.5);
+    -webkit-box-shadow: 0 4px 8px rgba(0,0,0,0.5);
+    box-shadow: 0 4px 8px rgba(0,0,0,0.5);
+    border: 2px solid #000;
   }
   
 = render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'trips_runs'
-.col-md-2{style: 'padding: 0px 15px 0px 0px;'}
+.col-md-2{style: 'padding: 0px 15px 0px 0px; margin-bottom: 230px;'}
   = render :partial => 'filters'
-.col-md-10.dispatch-main{style: 'padding: 0px;'}
+.col-md-10.dispatch-main{style: 'padding: 0px; margin-bottom: 230px;'}
   = render 'runs_list'
-= render 'unassigned_trips_panel'
+.col-md-12#unscheduled_trips_container
+  = render 'unassigned_trips_panel'
 
 :javascript
   $(document).on('click', '.panel-heading span.panel-expand-collapse', function(e){
@@ -61,6 +71,19 @@
       $this.parents('.panel').find('.panel-body').slideDown();
       $this.removeClass('panel-collapsed');
       $this.find('i').removeClass('fa-chevron-down').addClass('fa-chevron-up');
+    }
+  });
+
+  $(document).on('click', '.panel-heading span.panel-expand-collapse-reverse', function(e){
+    var $this = $(this);
+    if(!$this.hasClass('panel-collapsed')) {
+      $this.parents('.panel').find('.panel-body').slideUp();
+      $this.addClass('panel-collapsed');
+      $this.find('i').removeClass('fa-chevron-down').addClass('fa-chevron-up');
+    } else {
+      $this.parents('.panel').find('.panel-body').slideDown();
+      $this.removeClass('panel-collapsed');
+      $this.find('i').removeClass('fa-chevron-up').addClass('fa-chevron-down');
     }
   });
 
