--- a/app/views/trips_runs/_run_manifest_table.html.haml
+++ b/app/views/trips_runs/_run_manifest_table.html.haml
@@ -1,6 +1,8 @@
 %table.table.table-striped.table-bordered.run-manifest-table{style: 'max-height: 300px; overflow-y: auto;'}
   %thead
     %tr
+      %th
+        %input.master-select-checkbox{type: "checkbox"}
       %th= translate_helper(:run_manifest_table_header_action)
       %th= translate_helper(:run_manifest_table_header_customer)
       %th= translate_helper(:run_manifest_table_header_address)
@@ -12,17 +14,24 @@
       %th= translate_helper(:run_manifest_table_header_comments)
       %th
   %tbody
-    - itins = get_itineraries(trips)
-    - itins.each do |itin|
-      - is_pickup = itin[:action] == 'Pickup'
+    - if trips.empty?
       %tr
-        %td= itin[:action]
-        %td= itin[:customer]
-        %td= itin[:address]
-        %td= itin[:driver_notified]
-        %td= format_time_for_listing(itin[:time]) if is_pickup
-        %td= format_time_for_listing(itin[:time]) unless is_pickup
-        %td 
-        %td
-        %td= itin[:comments]
-        %td
+        %td{colspan: 11}= translate_helper(:empty_trips)
+    - else
+      - itins = get_itineraries(trips)
+      - itins.each do |itin|
+        - is_pickup = itin[:action] == 'Pickup'
+        %tr{data: {trip_id: itin[:trip_id]}}
+          %td
+            %input.trip-selected{type: "checkbox"}
+          %td= itin[:action]
+          %td= itin[:customer]
+          %td= itin[:address]
+          %td= itin[:driver_notified]
+          %td= format_time_for_listing(itin[:time]) if is_pickup
+          %td= format_time_for_listing(itin[:time]) unless is_pickup
+          %td 
+          %td
+          %td= itin[:comments]
+          %td
+
