--- a/app/views/trips_runs/_unassigned_trips_panel.html.haml
+++ b/app/views/trips_runs/_unassigned_trips_panel.html.haml
@@ -1,8 +1,10 @@
-.panel.panel-warning#unscheduled_trips_panel{style: 'margin: 0px;'}
+.panel.panel-warning#unassigned_trips_panel{style: 'margin: 0px;'}
   .panel-heading
     .pull-right{style: 'padding-right: 0px;'}
       %span.panel-expand-collapse-reverse.dispatch-action
         %i.fa.fa-chevron-down
-    %h3.panel-title= translate_helper("unassigned_trips")
+    %h3.panel-title.text-center
+      = render 'unassigned_trips_panel_title'
+
   .panel-body
     = render 'trips_runs/unassigned_trips_table', trips: @unassigned_trips
