--- a/app/views/trips_runs/_unassigned_trips_table.html.haml
+++ b/app/views/trips_runs/_unassigned_trips_table.html.haml
@@ -1,6 +1,7 @@
 %table.table.table-striped.table-bordered#unassigned_trips_table{style: 'max-height: 200px; overflow-y: auto;'}
   %thead
     %tr
+      %th
       %th= translate_helper(:unassigned_trips_table_header_customer)
       %th= translate_helper(:unassigned_trips_table_header_phone)
       %th= translate_helper(:unassigned_trips_table_header_pickup_time)
@@ -13,7 +14,9 @@
       %th= translate_helper(:unassigned_trips_table_header_actions)
   %tbody
     - trips.each do |trip|
-      %tr
+      %tr{data: {trip_id: trip.id}}
+        %td
+          %input.trip-selected{type: "checkbox"}
         %td= trip.customer.name
         %td= simple_format [trip.customer.phone_number_1, trip.customer.phone_number_2].compact.join('<br>')
         %td= format_time_for_listing(trip.pickup_time)
@@ -24,6 +27,8 @@
         %td= trip.trip_size
         %td
         %td
+          = link_to edit_trip_path(trip, from_dispath: true), style: 'padding-right: 5px;', title: 'Edit' do 
+            %i.fa.fa-pencil
 
 :javascript
   $('#unassigned_trips_table tbody tr td').draggable({
