--- a/app/views/trips_runs/_run_trips_panel.html.haml
+++ b/app/views/trips_runs/_run_trips_panel.html.haml
@@ -3,7 +3,7 @@
     .pull-right{style: 'padding-right: 0px;'}
       = render 'unschedule_trip_dropdown'
       %span.dispatch-action
-        = link_to cancel_run_path(run, from_dispath: true), title: 'Cancel run', style: 'color: white;', remote: true, data: {confirm: 'Are you sure to cancel this run?'} do 
+        = link_to cancel_run_trips_runs_path(run_id: run.id), title: 'Cancel run', style: 'color: white;', remote: true, data: {confirm: 'Are you sure to cancel this run?'} do 
           %i.fa.fa-undo
       %span.panel-close.dispatch-action{title: 'Close'}
         %i.fa.fa-remove
