--- a/app/views/trips_runs/_unassigned_trips_table.html.haml
+++ b/app/views/trips_runs/_unassigned_trips_table.html.haml
@@ -1,4 +1,4 @@
-%table.table.table-striped.table-bordered#unassigned_trips_table{style: 'max-height: 200px; overflow-y: auto;'}
+%table.table.table-striped.table-bordered#unassigned_trips_table
   %thead
     %tr
       %th
