Drag & drop trip from one run to another; Enable sticky header in unassigned trips table

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -24,4 +24,5 @@
 @import "trip_place_picker";
 @import "selectize";
 @import "selectize.bootstrap3";
+@import "bootstrap-table";
 @import "dispatch";
