Provide reason as to why inactivate a provider [RPII-293]

--- a/app/views/providers/show.html.haml
+++ b/app/views/providers/show.html.haml
@@ -5,7 +5,8 @@
       - if can? :index, Provider
         = link_to translate_helper("providers_link_text"), providers_path, class: "btn action-button"
       - if @provider.active?
-        = link_to translate_helper("inactivate"), inactivate_provider_path(@provider), method: :post, :class=>'btn action-button', :data => { :confirm => translate_helper(:inactivate_provider_confirmation)}
+        = button_tag :type => 'button', id: 'inactivateProvider', "data-target" => "#inactivateProviderDialog", "data-toggle" => "modal", :class => "btn action-button" do
+          = translate_helper(:inactivate)
       - else
         = link_to translate_helper("reactivate"), reactivate_provider_path(@provider), method: :post, :class=>'btn action-button', :data => { :confirm => translate_helper(:reactivate_provider_confirmation)}
       = link_to translate_helper("edit_provider_button"), edit_provider_path(@provider), class: "btn action-button"
@@ -13,6 +14,7 @@
 
 - if @provider.active?
   = render 'template', partial_name: 'profile', hide_header: true
+  = render 'inactivate_dialog'
 - else
   = render 'profile'
   = render 'shared/highlight_active_tab_js', is_primary_nav: false, tab_class: 'provider'
