--- a/app/views/trips/_form.html.haml
+++ b/app/views/trips/_form.html.haml
@@ -6,6 +6,7 @@
 - edit_mode = :edit if !defined? edit_mode
 = form_for @trip,
   html: { class: 'trip_form', "data-remote" => @remote } do |f|
+  = hidden_field_tag :from_dispatch, params[:from_dispatch]
   - if @is_repeating_trip
     = render 'repeating_trips/form_header', edit_mode: edit_mode, f: f
   - else
