--- a/app/views/trips_runs/_unassigned_trips_table.html.haml
+++ b/app/views/trips_runs/_unassigned_trips_table.html.haml
@@ -36,7 +36,7 @@
         %td= trip.trip_size
         %td
         %td
-          = link_to edit_trip_path(trip, from_dispath: true), style: 'padding-right: 5px;', title: 'Edit' do 
+          = link_to edit_trip_path(trip, from_dispatch: true), style: 'padding-right: 5px;', title: 'Edit' do 
             %i.fa.fa-pencil
 
 :javascript
