--- a/app/views/trips_runs/_runs_table.html.haml
+++ b/app/views/trips_runs/_runs_table.html.haml
@@ -29,7 +29,7 @@
         %td= format_time_for_listing run.scheduled_end_time
         %td.trips_count= run.trips.count
         %td
-          = link_to edit_run_path(run, from_dispath: true), style: 'padding-right: 5px;', title: 'Edit' do 
+          = link_to edit_run_path(run, from_dispatch: true), style: 'padding-right: 5px;', title: 'Edit' do 
             %i.fa.fa-pencil
           = link_to cancel_run_trips_runs_path(run_id: run.id), title: 'Cancel run', remote: true, data: {confirm: 'Are you sure to cancel this run?'} do 
             %i.fa.fa-undo
