--- a/app/views/trips_runs/_runs_panel.html.haml
+++ b/app/views/trips_runs/_runs_panel.html.haml
@@ -25,6 +25,6 @@
 :javascript
   $(function() {
     $(document).on('click', '.panel-heading span.panel-close-all-runs', function(e){
-      $('.run_trips_panel').hide('slow', function(){ $(this).remove(); });
+      $('.run_trips_panel .panel-heading span.panel-close').click();
     });
   });
