--- a/app/views/trips_runs/_run_trips_panel.html.haml
+++ b/app/views/trips_runs/_run_trips_panel.html.haml
@@ -8,6 +8,9 @@
       %span.dispatch-action
         = link_to edit_run_path(run, from_dispatch: true), style: 'color: white;', title: 'Edit' do 
           %i.fa.fa-pencil
+      %span.dispatch-action
+        = link_to new_trip_path(from_dispatch: true, run_id: run.id), style: 'color: white;', title: translate_helper("new_trip_link_text") do 
+          %i.fa.fa-plus
       %span.panel-close.dispatch-action{title: 'Close'}
         %i.fa.fa-remove
       %span.panel-expand-collapse.dispatch-action{title: 'Collapse/expand'}
