--- a/app/views/trips_runs/_unassigned_trips_panel.html.haml
+++ b/app/views/trips_runs/_unassigned_trips_panel.html.haml
@@ -1,6 +1,9 @@
 .panel.panel-warning#unassigned_trips_panel{style: 'margin: 0px;'}
   .panel-heading
     .pull-right{style: 'padding-right: 0px;'}
+      %span.dispatch-action
+        = link_to new_trip_path(from_dispatch: true), style: 'color: white;', title: translate_helper("new_trip_link_text") do 
+          %i.fa.fa-plus
       %span.panel-expand-collapse-reverse.dispatch-action
         %i.fa.fa-chevron-down
     %h3.panel-title.text-center
