--- a/app/views/trips_runs/index.html.haml
+++ b/app/views/trips_runs/index.html.haml
@@ -7,6 +7,11 @@
   = render 'unassigned_trips_panel'
 
 :javascript
+  // Local Storages
+  // dispatch_loaded_run_ids = [] (list of run panels that are open)
+  // dispatch_run_#{id}_collapsed: 1/0 (1 if a specific run panel is collapsed)
+  // dispatch_unassigned_trips_collapsed: 1/0 (1 if the unassigned trips panel is collapsed)
+
   // update one trip schedule status
   function schedule_trip(trip_id, run_id, prev_run_id) {
     // re-schedule a trip
