--- a/app/views/trips_runs/index.html.haml
+++ b/app/views/trips_runs/index.html.haml
@@ -9,7 +9,7 @@
 :javascript
   // Local Storages
   // dispatch_loaded_run_ids = [] (list of run panels that are open)
-  // dispatch_run_#{id}_collapsed: 1/0 (1 if a specific run panel is collapsed)
+  // dispatch_run_{id}_collapsed: 1/0 (1 if a specific run panel is collapsed)
   // dispatch_unassigned_trips_collapsed: 1/0 (1 if the unassigned trips panel is collapsed)
 
   // update one trip schedule status
