--- a/app/views/customers/_ada_eligibility.html.haml
+++ b/app/views/customers/_ada_eligibility.html.haml
@@ -6,7 +6,7 @@
   .col-sm-7.control-label
     %b= translate_helper(:ada_eligible)
   .col-sm-5
-    = f.select :ada_eligible, [[translate_helper(:eligible), true], [translate_helper(:not_eligible), false]], {include_blank: true}, {class: 'form-control customer-eligibility', required: true}
+    = f.select :ada_eligible, [[translate_helper(:eligible), true], [translate_helper(:not_eligible), false]], {include_blank: true}, {class: 'form-control customer-eligibility'}
   .col-sm-10.pull-right.ineligible-reason{style: @customer.ada_eligible == false ? '' : 'display: none;'}
     .col-sm-4.control-label
       = translate_helper(:ineligible_reason)
