Driver name comes form user'

--- a/app/views/drivers/_form.html.haml
+++ b/app/views/drivers/_form.html.haml
@@ -23,7 +23,7 @@
             .form-group
               = f.label :name, translate_helper("driver_form_name"), class: "col-md-2 control-label"
               .col-md-10
-                = @driver.user_name || @driver.name
+                = @driver.user_name
                 - if @driver.user.present? && !@driver.user.deleted? && can?(:edit, @driver.user)
                   = link_to translate_helper("edit"), edit_user_path(@driver.user), class: "btn action-button"
           .form-group
